--- a/package.json
+++ b/package.json
@@ -32,18 +32,18 @@
     "grunt-angular-templates": "^0.5.4",
     "karma-junit-reporter": "^0.2.2",
     "protractor": "~0.20.1",
-    "http-server": "^0.6.1"
+    "http-server": "^0.6.1",
+    "karma-chrome-launcher": "^0.1.3",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-jasmine": "^0.1.5"
   },
   "engines": {
     "node": ">=0.10.0"
   },
   "scripts": {
     "start": "http-server -a localhost -p 8000",
-    
     "test": "grunt test",
-    
     "update-webdriver": "webdriver-manager update",
-    
     "protractor": "protractor test/protractor.conf.js"
   }
 }
